<resources>
    <string name="app_name">Embark Notes</string>

    <string name="no_notes_have_been_created">No notes have been created.</string>
    <string name="add_note">Add note</string>
    <string name="title_hint">Title</string>
    <string name="note_hint">Note</string>

    <string name="empty_note_discarded">Empty note discarded.</string>
    <string name="note_archived">Note archived.</string>

    <string name="delete_note_dialog_title">Delete this note?</string>
    <string name="delete_note_dialog_message">This note will be permanently removed from the device.</string>
    <string name="delete_note_positive_button">Delete</string>
    <string name="delete_note_negative_button">Cancel</string>
    <string name="searchbar_hint">Search your notes</string>

    <string name="notes">Notes</string>
    <string name="reminders">Reminders</string>
    <string name="archived">Archived</string>
    <string name="settings">Settings</string>
    <string name="labels">Labels</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>